# mangrove

./: README.md
ClangReduce/: CMakeLists.txt  ClangReduce.cpp  Makefile  README.md  run_clang-reduce.sh  setup.sh
False-Positive-Checkers/AST-Matchers/ArrayResize/: ArrayResize.cpp  CMakeLists.txt  Makefile  array-resize.c  setup.sh
False-Positive-Checkers/AST-Matchers/IntermediateFunctionCall/: CMakeLists.txt  intermediate-function-call.c  setup.sh
False-Positive-Checkers/AST-Matchers/NullArrayAccess/: CMakeLists.txt  NullArrayAccess.cpp  setup.sh
False-Positive-Checkers/AST-Matchers/SubscopeLeak/: CMakeLists.txt  README.md  run_clang-tool.sh
False-Positive-Checkers/CppCheck/Identifier-in-Condition/InitInCondition/: CMakeLists.txt  README.md
False-Positive-Checkers/CppCheck/Identifier-in-Condition/StaticVariable/: CMakeLists.txt  Makefile  setup.sh  visit-test.c
False-Positive-Checkers/scan-build/ConditionUninitVar/: CMakeLists.txt  ConditionUninitVar.cpp  Makefile  condition-uninit-var.c  run_clang-tool.sh
creduce-exps/: README.md
creduce-results/: README.md
creduce-results/branch-selection/: CWE775_Missing_Release_of_File_Descriptor_or_Handle__fopen_no_close_15.c  CWE775_Missing_Release_of_File_Descriptor_or_Handle__fopen_no_close_15.orig.c  README.md  branch-selection.c  reduce  test_interest.sh
creduce-results/condition-mem-leak/: CWE761_Free_Pointer_Not_at_Start_of_Buffer__wchar_t_fixed_string_05.c  CWE761_Free_Pointer_Not_at_Start_of_Buffer__wchar_t_fixed_string_05.orig.c  condition-mem-leak.c  reduce  test_interest.sh
creduce-results/condition-null-ptr/: CWE122_Heap_Based_Buffer_Overflow__cpp_CWE193_char_cpy_04.cpp  CWE122_Heap_Based_Buffer_Overflow__cpp_CWE193_char_cpy_04.orig.cpp  README.md  condition-null-ptr.cpp  reduce  test_interest.sh
creduce-results/condition-uninit-var/: CWE121_Stack_Based_Buffer_Overflow__CWE193_char_alloca_cpy_05.c  CWE121_Stack_Based_Buffer_Overflow__CWE193_char_alloca_cpy_05.orig.c  README.md  condition-uninit-var.c  reduce  test_interest.sh
creduce-results/modest-buffer-use/: README.md  (+6 more)
false-positive-catalog/: README.md  buffer-underflow-usage.c  condition-external-const-var.cpp  condition-mem-leak.c  condition-null-ptr.c  condition-uninit-var-chain.c  condition-uninit-var-chain_01.c  condition-uninit-var.c  conditional-mem-leak-external-function.cpp  conditional-mem-leak-external-var.c  conditional-mem-leak.c  conditional-null-ptr.c  conditional-uninit-var-chain.c  conditional-uninit-var-external-function.cpp  conditional-uninit-var.c  consecutive-token.cpp  function-conditional-mem-leak.cpp  function-conditional-null-ptr.cpp  function-conditional-uninit-var.cpp  incomplete-buffer-use.c  null-array-access.c  ref-ptr-read.cpp  return-local-param.c  sscanf-uninit-var.c  sub-scope-leak.cpp  union-simultaneous-access-mem-leak.cpp  union-simultaneous-access.cpp
false-positive-checkers/AST-Matchers/ArrayResize/: CMakeLists.txt  Makefile  README.md  run_clang-tool.sh
false-positive-checkers/AST-Matchers/BufferStoreFgets/: BufferStoreFgets.cpp  CMakeLists.txt  Makefile  buffer-store-fgets.c
false-positive-checkers/AST-Matchers/BufferUnderflowUsage/: BufferUnderflowUsage.cpp  CMakeLists.txt  Makefile  buffer-underflow-usage.c  setup.sh
false-positive-checkers/AST-Matchers/ConditionMemLeak/: CMakeLists.txt  ConditionMemLeak.cpp  Makefile  setup.sh
false-positive-checkers/AST-Matchers/ConditionMemLeakExternalFunction/: CMakeLists.txt  Makefile  condition-mem-leak-external-function.cpp
false-positive-checkers/AST-Matchers/ConditionMemLeakExternalVar/: CMakeLists.txt  Makefile  run_clang-tool.sh
false-positive-checkers/AST-Matchers/ConditionMemLeakMidBuf/: CMakeLists.txt  ConditionMemLeakMidBuf.cpp  README.md  condition-mem-leak-mid-buf.c  run_clang-tool.sh  setup.sh
false-positive-checkers/AST-Matchers/ConditionNullPtr/: CMakeLists.txt  ConditionNullPtr.cpp  Makefile  README.md  condition-null-ptr.c
false-positive-checkers/AST-Matchers/ConditionNullPtrExternalFunction/: CMakeLists.txt  Makefile  run_clang-tool.sh
false-positive-checkers/AST-Matchers/ConditionUninitVar/: CMakeLists.txt  ConditionUninitVar.cpp  Makefile  README.md  condition-uninit-var.c  setup.sh
false-positive-checkers/AST-Matchers/ConditionUninitVarExternalFunction/: CMakeLists.txt  Makefile  README.md  conditional-uninit-var-external-function.cpp
false-positive-checkers/AST-Matchers/ConditionUninitVarExternalVar/: CMakeLists.txt  ConditionUninitVarExternalVar.cpp  Makefile  README.md  setup.sh
false-positive-checkers/AST-Matchers/IntermediateFunctionCall/: CMakeLists.txt  IntermediateFunctionCall.cpp  Makefile  README.md  run_clang-tool.sh
false-positive-checkers/AST-Matchers/NullArrayAccess/: CMakeLists.txt  Makefile  NullArrayAccess.cpp  README.md  null-array-access.c  run_clang-tool.sh
false-positive-checkers/AST-Matchers/RefPtrRead/: CMakeLists.txt  Makefile  README.md  RefPtrRead.cpp  setup.sh
false-positive-checkers/AST-Matchers/ReturnLocalParam/: CMakeLists.txt  Makefile  README.md  ReturnLocalParam.cpp  run_clang-tool.sh  setup.sh
false-positive-checkers/AST-Matchers/SubscopeLeak/: CMakeLists.txt  Makefile  README.md  SubscopeLeak.cpp  setup.sh  subscope-leak.cpp
false-positive-checkers/scan-build/ConditionMemLeak/: CMakeLists.txt  ConditionMemLeak.cpp  condition-mem-leak.c
mangrove/: .project  README.md  pom.xml  slicing_exp_runner.py
pattern-graphs/: generic-pattern-grammar.txt
sca-warning-logs/: README.md  cppcheck-juliet-warnings.xlsx  juliet-1.2_cppcheck-1.72_default-checks.txt  juliet-1.2_cppcheck-1.72_memleak.txt  juliet-1.2_cppcheck-1.72_memleak.txt_conditional-mem-leak.txt  juliet-1.2_cppcheck-1.72_memleak_conditional-mem-leak.txt  juliet-1.2_cppcheck-1.72_memleak_subscope-leak.txt  juliet-1.2_cppcheck-1.72_nullPointer.txt  juliet-1.2_cppcheck-1.72_nullPointer_conditional-null-ptr.txt  juliet-1.2_cppcheck-1.72_returnLocalVariable.txt  juliet-1.2_cppcheck-1.72_uninitvar.txt  juliet-1.2_cppcheck-1.72_uninitvar.txt_conditional-uninit-var.txt  juliet-1.2_cppcheck-1.72_uninitvar_conditional-uninit-var.txt
(+12627 files in other folders)
