add_clang_executable(buffer-store-fgets
  BufferStoreFgets.cpp
  )

target_link_libraries(buffer-store-fgets
  clangAnalysis
  clangAST
  clangBasic
  clangDriver
  clangEdit
  clangFrontend
  clangLex
  clangParse
  clangRewrite
  clangRewriteFrontend
  clangSema
  clangSerialization
  clangStaticAnalyzerFrontend
  clangTooling
  )
