add_clang_executable(cker-buffer-store-fgets
  BufferStoreFgets.cpp
  )

target_link_libraries(cker-buffer-store-fgets
  clangAnalysis
  clangAST
  clangBasic
  clangDriver
  clangEdit
  clangFrontend
  clangLex
  clangParse
  clangRewrite
  clangRewriteFrontend
  clangSema
  clangSerialization
  clangStaticAnalyzerFrontend
  clangTooling
  )
