add_clang_executable(cker-buffer-underflow-usage
  BufferUnderflowUsage.cpp
  )

target_link_libraries(cker-buffer-underflow-usage
  clangAnalysis
  clangAST
  clangBasic
  clangDriver
  clangEdit
  clangFrontend
  clangLex
  clangParse
  clangRewrite
  clangRewriteFrontend
  clangSema
  clangSerialization
  clangStaticAnalyzerFrontend
  clangTooling
  )
