add_clang_executable(cker-condition-mem-leak
  ConditionMemLeak.cpp
  )

target_link_libraries(cker-condition-mem-leak
  clangAnalysis
  clangAST
  clangBasic
  clangDriver
  clangEdit
  clangFrontend
  clangLex
  clangParse
  clangRewrite
  clangRewriteFrontend
  clangSema
  clangSerialization
  clangStaticAnalyzerFrontend
  clangTooling
  )
