add_clang_executable(cker-condition-mem-leak-external-function
  ConditionMemLeakExternalFunction.cpp
  )

target_link_libraries(cker-condition-mem-leak-external-function
  clangAnalysis
  clangAST
  clangBasic
  clangDriver
  clangEdit
  clangFrontend
  clangLex
  clangParse
  clangRewrite
  clangRewriteFrontend
  clangSema
  clangSerialization
  clangStaticAnalyzerFrontend
  clangTooling
  )
