add_clang_executable(cker-condition-mem-leak-external-var
  ConditionMemLeakExternalVar.cpp
  )

target_link_libraries(cker-condition-mem-leak-external-var
  clangAnalysis
  clangAST
  clangBasic
  clangDriver
  clangEdit
  clangFrontend
  clangLex
  clangParse
  clangRewrite
  clangRewriteFrontend
  clangSema
  clangSerialization
  clangStaticAnalyzerFrontend
  clangTooling
  )
