add_clang_executable(condition-null-ptr-external-function
  ConditionNullPtrExternalFunction.cpp
  )

target_link_libraries(condition-null-ptr-external-function
  clangAnalysis
  clangAST
  clangBasic
  clangDriver
  clangEdit
  clangFrontend
  clangLex
  clangParse
  clangRewrite
  clangRewriteFrontend
  clangSema
  clangSerialization
  clangStaticAnalyzerFrontend
  clangTooling
  )
