add_clang_executable(cker-condition-uninit-var
  ConditionUninitVar.cpp
  )

target_link_libraries(cker-condition-uninit-var
  clangAnalysis
  clangAST
  clangBasic
  clangDriver
  clangEdit
  clangFrontend
  clangLex
  clangParse
  clangRewrite
  clangRewriteFrontend
  clangSema
  clangSerialization
  clangStaticAnalyzerFrontend
  clangTooling
  )
