add_clang_executable(cker-condition-uninit-var-external-function
  ConditionUninitVarExternalFunction.cpp
  )

target_link_libraries(cker-condition-uninit-var-external-function
  clangAnalysis
  clangAST
  clangBasic
  clangDriver
  clangEdit
  clangFrontend
  clangLex
  clangParse
  clangRewrite
  clangRewriteFrontend
  clangSema
  clangSerialization
  clangStaticAnalyzerFrontend
  clangTooling
  )
