add_clang_executable(cker-null-array-access
  NullArrayAccess.cpp
  )

target_link_libraries(cker-null-array-access
  clangAnalysis
  clangAST
  clangBasic
  clangDriver
  clangEdit
  clangFrontend
  clangLex
  clangParse
  clangRewrite
  clangRewriteFrontend
  clangSema
  clangSerialization
  clangStaticAnalyzerFrontend
  clangTooling
  )
