add_clang_executable(cker-ref-ptr-read
  RefPtrRead.cpp
  )

target_link_libraries(cker-ref-ptr-read
  clangAnalysis
  clangAST
  clangBasic
  clangDriver
  clangEdit
  clangFrontend
  clangLex
  clangParse
  clangRewrite
  clangRewriteFrontend
  clangSema
  clangSerialization
  clangStaticAnalyzerFrontend
  clangTooling
  )
