add_clang_executable(cker-return-local-param
  ReturnLocalParam.cpp
  )

target_link_libraries(cker-return-local-param
  clangAnalysis
  clangAST
  clangBasic
  clangDriver
  clangEdit
  clangFrontend
  clangLex
  clangParse
  clangRewrite
  clangRewriteFrontend
  clangSema
  clangSerialization
  clangStaticAnalyzerFrontend
  clangTooling
  )
