add_clang_executable(cker-subscope-leak
  SubscopeLeak.cpp
  )

target_link_libraries(cker-subscope-leak
  clangAnalysis
  clangAST
  clangBasic
  clangDriver
  clangEdit
  clangFrontend
  clangLex
  clangParse
  clangRewrite
  clangRewriteFrontend
  clangSema
  clangSerialization
  clangStaticAnalyzerFrontend
  clangTooling
  )
